fix: EVER-14122 tooltip text wrap when using strings and width input

--- a/src/components/Tooltip/Tooltip.module.css
+++ b/src/components/Tooltip/Tooltip.module.css
@@ -175,10 +175,9 @@
 
 .arrow::before {
   border-color: transparent;
-  border-width:
-    calc(
-      var(--rvr-tooltip-arrow-size) + var(--rvr-tooltip-border-size)
-    );
+  border-width: calc(
+    var(--rvr-tooltip-arrow-size) + var(--rvr-tooltip-border-size)
+  );
   filter: blur(2px);
   z-index: -1;
 }
@@ -265,8 +264,8 @@
 
 .textContent {
   text-align: center;
-  white-space: nowrap;
-  word-wrap: none;
+  white-space: normal;
+  overflow-wrap: break-word;
 }
 
 .tooltipClose {
